--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: "Segoe UI"; /* Имя шрифта */
-    src: url(../fonts/SegoeUI/SegoeUI.ttf); /* Путь к файлу со шрифтом */
-}
-
 
 body {
     font-family: "Segoe UI", sans-serif;
@@ -10,15 +5,41 @@ body {
     color: black;
     font-size: 16px;
     line-height: 142%;
+    background: white;
 }
 
 img {
     display: block;
 }
+
+/*style for button*/
+.button {
+    width: 222px;
+    height: 50px;
+    background: #F25B24;
+    border: 0;
+    border-radius: 4px;
+    color: white;
+    font-family: Whitney, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 100%;
+}
+
+.button:hover, .button:focus, .button:active {
+    background:#F36B56 ;
+}
+
+.wrapper {
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
 /* Header styles start */
 
 .header {
-    font-family: Whitney, sans-serif;
+    font-family: "Whitney", sans-serif;
     font-weight: 325;
     font-size: 18px;
     line-height: 23px;
@@ -28,10 +49,6 @@ img {
     width: 100%;
 }
 
-.wrapper {
-    max-width: 1170px;
-    margin: 0 auto;
-}
 
 .header__wrapper {
     display: flex;
@@ -86,20 +103,6 @@ img {
 
 /* Header styles end */
 
-.button {
-    width: 222px;
-    height: 50px;
-    background: #F25B24;
-    border: 0;
-    border-radius: 4px;
-    color: white;
-    font-family: Whitney, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 100%;
-}
-
 /* Intro styles start */
 
 .intro {
@@ -119,7 +122,8 @@ img {
     max-width: 527px;
     padding-top: 100px;
     margin-bottom: 30px;
-
+    z-index: 100;
+    position: relative;
 }
 
 .intro__subtitle {
@@ -128,12 +132,15 @@ img {
     line-height: 31px;
     width: 515px;
     margin-bottom: 60px;
+    z-index: 1000;
+    position: relative;
 }
 
 .intro__mainimg {
     position: absolute;
     top: 57px;
     right: 0;
+    z-index: 1;
 }
 
 .intro__button {
@@ -143,13 +150,16 @@ img {
 
 /*Benefits styles start */
 
+.benefits {
+    padding: 130px 0;
+}
+
 .benefits__title {
-    font-family: Whitney, sans-serif;
+    font-family: "Whitney", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 40px;
     line-height: 52px;
-    padding-top: 130px;
     padding-bottom: 50px;
     color: #2E2D35;
 }
@@ -200,3 +210,55 @@ img {
 }
 
 /*Benefits styles end*/
+
+/*registration styles start*/
+
+.registration__wrapper {
+    background: linear-gradient(90deg, #2D1686 0%, #4E33B5 100%);
+    border-radius: 10px;
+    position: relative;
+    padding: 70px 0 70px 70px;
+    margin-bottom: 185px;
+}
+
+.registration__desk {
+    font-family: "Whitney", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 34px;
+    line-height: 45px;
+    color: white;
+    padding-bottom: 46px;
+    max-width: 556px;
+    z-index: 3;
+}
+
+.registration__pic-cars {
+    position: absolute;
+    right: 0;
+    top: 24px;
+    z-index: 2;
+}
+
+.registration__pic-map {
+    position: absolute;
+    right: 88px;
+    top: 19px;
+    z-index: 1;
+}
+
+
+/*registration styles end*/
+
+/* other sizes */
+
+@media screen and (max-width: 1024px) {
+    .wrapper {
+        max-width: 900px;
+    }
+
+
+
+
+}
+
